--- a/src/main/java/CoffeeShop/AdminUI.form
+++ b/src/main/java/CoffeeShop/AdminUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Admin"/>
@@ -100,23 +100,19 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="categoriesLabel" alignment="1" max="32767" attributes="0"/>
-                          <Group type="102" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="menuSearch" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="menuSearchLabel" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="categoryMainCourse" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="categoryStarters" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="categoryDessert" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="categoryDrinks" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="categoryOthers" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="menuSearch" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="menuSearchLabel" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="categoryMainCourse" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="categoryStarters" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="categoryDessert" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="categoryDrinks" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="categoryOthers" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="categoriesLabel" alignment="3" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="menuScrollPane" min="-2" pref="319" max="-2" attributes="0"/>
@@ -188,6 +184,7 @@
             <Component class="javax.swing.JToggleButton" name="deleteSelectedItem">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Delete"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteSelectedItemActionPerformed"/>
@@ -232,12 +229,17 @@
             <Component class="javax.swing.JButton" name="addMenuItem">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Add"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="menuSaveChanges">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Save"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuSaveChangesActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -366,11 +368,13 @@
             <Component class="javax.swing.JButton" name="addCustomer">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Edit"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="customerSaveChanges">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Add"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="viewCustomerOrderHistory">
